implemented all features and added cucumber java tests